--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@mui/material": "^5.15.19",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
     "nodemon": "^3.1.3",
     "validator": "^13.12.0"
