--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 DATABASE = 'mongodb+srv://reno:benedict4705@cluster0.i4j9ndf.mongodb.net/Amazonclone?retryWrites=true&w=majority'
+KEY = benedictreno
